--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
 <!--        for buttons-->
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <Button
@@ -23,7 +23,10 @@
                 android:layout_weight="1"
                 android:contentDescription="@string/shuffle_btn"
                 style="@style/Widget.AppCompat.Button.Borderless"
-                android:drawableTop="@drawable/shuffle_icon"/>
+                android:drawableTop="@drawable/shuffle_icon"
+                android:text="@string/shuffle_btn"
+                android:textColor="@color/black"
+                android:textAllCaps="false"/>
 
 
             <Button
@@ -32,7 +35,10 @@
                 android:layout_weight="1"
                 android:contentDescription="@string/favourites_btn"
                 style="@style/Widget.AppCompat.Button.Borderless"
-                android:drawableTop="@drawable/favourite_icon"/>
+                android:drawableTop="@drawable/favourite_icon"
+                android:text="@string/favourites_btn"
+                android:textColor="@color/black"
+                android:textAllCaps="false"/>
 
             <Button
                 android:layout_width="wrap_content"
@@ -40,9 +46,25 @@
                 android:layout_weight="1"
                 android:contentDescription="@string/playlist_btn"
                 style="@style/Widget.AppCompat.Button.Borderless"
-                android:drawableTop="@drawable/playlist_icon"/>
+                android:drawableTop="@drawable/playlist_icon"
+                android:text="@string/playlist_btn"
+                android:textColor="@color/black"
+                android:textAllCaps="false"/>
 
         </LinearLayout>
+        
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/total_songs"
+            android:textColor="@color/black"
+            android:layout_margin="10dp"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+        
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
