--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -8,18 +8,20 @@
     android:orientation="vertical"
     android:gravity="center">
 
+<!--    First Row-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:gravity="center">
+        android:gravity="center"
+        android:layout_weight="1">
 
+<!--        Back Button-->
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/back_icon"
             android:background="@android:color/transparent"
-            android:layout_marginStart="5dp"
             android:contentDescription="@string/back_btn"/>
 
         <TextView
@@ -28,8 +30,10 @@
             android:text="@string/world_of_music"
             android:textSize="20sp"
             android:gravity="center"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            tools:ignore="NestedWeights" />
 
+<!--    favourites button-->
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -40,6 +44,7 @@
 
     </LinearLayout>
 
+<!--    Current song image-->
     <com.google.android.material.imageview.ShapeableImageView
         android:layout_width="250dp"
         android:layout_height="250dp"
@@ -49,69 +54,122 @@
         app:strokeColor="@color/purple_200"
         app:strokeWidth="5dp"/>
 
+<!--    Current song name-->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:text="@string/song_name"
-        android:textSize="18sp"
         android:textColor="@color/black"
-        android:textAlignment="center"/>
+        android:textSize="18sp"
+        android:gravity="center"
+        android:layout_weight="1"/>
 
+<!--    Previous, Pause & Next-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_margin="10dp"
         android:orientation="horizontal"
-        android:gravity="center">
+        android:layout_weight="1">
 
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/purple_50"
             app:icon="@drawable/previous_icon"
-            android:backgroundTint="@color/purple_50"
-            app:iconSize="40dp"/>
+            app:iconSize="40dp" />
 
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:icon="@drawable/pause_icon"
-            app:iconSize="40dp"
+            android:layout_marginHorizontal="25dp"
             android:backgroundTint="@color/purple_100"
-            android:layout_marginHorizontal="25dp"/>
+            app:icon="@drawable/pause_icon"
+            app:iconSize="40dp" />
 
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:icon="@drawable/next_icon"
             android:backgroundTint="@color/purple_50"
-            app:iconSize="40dp"/>
+            app:icon="@drawable/next_icon"
+            app:iconSize="40dp" />
 
     </LinearLayout>
 
+<!--    start, end, thanh cuon (seekbar) -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="25dp"
         android:orientation="horizontal"
-        android:layout_margin="20dp">
+        android:layout_margin="20dp"
+        android:layout_weight="1">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textColor="@color/black"
             android:textSize="15sp"
-            android:text="@string/start_tv"/>
+            android:text="@string/start_tv"
+            android:gravity="center"/>
 
         <androidx.appcompat.widget.AppCompatSeekBar
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            tools:ignore="NestedWeights" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textColor="@color/black"
             android:textSize="15sp"
-            android:text="@string/end_tv"/>
+            android:text="@string/end_tv"
+            android:gravity="center"/>
+
+
+    </LinearLayout>
+
+<!--    repeat, timer, share-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_weight="1">
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/repeat_icon"
+            android:background="@android:color/transparent"
+            android:contentDescription="@string/repeat_btn"
+            android:layout_weight="1"/>
+
+        <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/equalizer_icon"
+        android:background="@android:color/transparent"
+        android:contentDescription="@string/equalizer_btn"
+        android:layout_weight="1"/>
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/timer_icon"
+            android:background="@android:color/transparent"
+            android:contentDescription="@string/timer"
+            android:layout_weight="1"/>
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/share_icon"
+            android:background="@android:color/transparent"
+            android:contentDescription="@string/share"
+            android:layout_weight="1"/>
+
 
 
     </LinearLayout>
