--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="purple_50">#E0CAFA</color>
     <color name="purple_100">#CCA5FB</color>
     <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#A964FD</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
