--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,13 +11,14 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-<!--        for buttons-->
+<!--        for button-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <Button
+                android:id="@+id/shuffleBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -30,6 +31,7 @@
 
 
             <Button
+                android:id="@+id/favouriteBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -41,6 +43,7 @@
                 android:textAllCaps="false"/>
 
             <Button
+                android:id="@+id/playlistBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
