--- a/app/src/main/res/layout/activity_favourite.xml
+++ b/app/src/main/res/layout/activity_favourite.xml
@@ -7,6 +7,7 @@
     tools:context=".FavouriteActivity">
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -22,7 +23,8 @@
             android:contentDescription="@string/back_btn"
             android:backgroundTint="@android:color/transparent"
             android:tint="@color/white"
-            tools:ignore="UseAppTint" />
+            tools:ignore="UseAppTint"
+            android:padding="5dp"/>
 
         <TextView
             android:layout_width="match_parent"
