--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,12 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.MusicPlayer" parent="Theme.MaterialComponents.Light.DarkActionBar.Bridge">
+    <style name="Theme.MusicPlayer" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="colorPrimary">@color/lavender</item>
     </style>
 
-    <style name="Theme.MusicPlayer" parent="Base.Theme.MusicPlayer" />
+<!--    <style name="Theme.MusicPlayer" parent="Base.Theme.MusicPlayer" />-->
     
     <style name="splash_screen" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="android:windowBackground">@drawable/splash_screen</item>
@@ -14,4 +14,30 @@
     </style>
 
     <attr name="themeColor" format="color"/>
+
+    //Theme for Activities
+    <style name="coolPink" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="themeColor">@color/cool_pink</item>
+        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimaryVariant">@color/black</item>
+        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/themeColor</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+    </style>
+
+    //Theme for Navigation Drawer
+    <style name="coolPinkNav" parent="Theme.MaterialComponents.Light">
+        <item name="themeColor">@color/cool_pink</item>
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimaryVariant">@color/black</item>
+        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorSecondary">@color/cool_pink</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/themeColor</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+    </style>
 </resources>
