--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,13 +4,14 @@
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="colorPrimary">@color/lavender</item>
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
     </style>
 
 <!--    <style name="Theme.MusicPlayer" parent="Base.Theme.MusicPlayer" />-->
     
     <style name="splash_screen" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="android:windowBackground">@drawable/splash_screen</item>
-        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+<!--        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>-->
     </style>
 
     <attr name="themeColor" format="color"/>
