play pause commit

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,7 +18,7 @@
 
     //Theme for Activities
     <style name="coolPink" parent="Theme.MaterialComponents.Light.NoActionBar">
-        <item name="themeColor">@color/cool_pink</item>
+        <item name="themeColor">@color/black</item>
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/black</item>
         <item name="colorOnPrimary">@color/black</item>
@@ -31,7 +31,7 @@
 
     //Theme for Navigation Drawer
     <style name="coolPinkNav" parent="Theme.MaterialComponents.Light">
-        <item name="themeColor">@color/cool_pink</item>
+        <item name="themeColor">@color/black</item>
         <item name="colorPrimary">@color/white</item>
         <item name="colorPrimaryVariant">@color/black</item>
         <item name="colorOnPrimary">@color/black</item>
