--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -48,6 +48,7 @@
 
 <!--    Current song image-->
     <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/songImgPA"
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:layout_margin="10dp"
@@ -58,6 +59,7 @@
 
 <!--    Current song name-->
     <TextView
+        android:id="@+id/songNamePA"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
@@ -76,6 +78,7 @@
         android:orientation="horizontal"
         android:layout_weight="1">
 
+<!--        previous-->
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -83,7 +86,9 @@
             app:icon="@drawable/previous_icon"
             app:iconSize="40dp" />
 
+<!--        pause & play -->
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/playPauseBtnPA"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="25dp"
@@ -91,6 +96,7 @@
             app:icon="@drawable/pause_icon"
             app:iconSize="40dp" />
 
+<!--        next-->
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
