--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -18,6 +18,7 @@
 
 <!--        Back Button-->
         <ImageButton
+            android:id="@+id/backBtnPA"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/back_icon"
@@ -37,6 +38,7 @@
 
 <!--    favourites button-->
         <ImageButton
+            android:id="@+id/favouriteBtnPA"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/favourite_empty_icon"
@@ -80,6 +82,7 @@
 
 <!--        previous-->
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/previousBtnPA"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/purple_50"
@@ -98,6 +101,7 @@
 
 <!--        next-->
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/nextBtnPA"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/purple_50"
@@ -115,6 +119,7 @@
         android:layout_weight="1">
 
         <TextView
+            android:id="@+id/tvSeekBarStart"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textColor="@color/black"
@@ -129,6 +134,7 @@
             tools:ignore="NestedWeights" />
 
         <TextView
+            android:id="@+id/tvSeekBarEnd"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textColor="@color/black"
@@ -146,23 +152,28 @@
         android:orientation="horizontal"
         android:layout_weight="1">
 
+<!--        repeat button-->
         <ImageButton
+            android:id="@+id/repeatBtnPA"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/repeat_icon"
             android:background="@android:color/transparent"
             android:contentDescription="@string/repeat_btn"
+            android:layout_weight="1"
+            tools:ignore="NestedWeights" />
+
+        <ImageButton
+            android:id="@+id/equalizerBtnPA"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/equalizer_icon"
+            android:background="@android:color/transparent"
+            android:contentDescription="@string/equalizer_btn"
             android:layout_weight="1"/>
 
         <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/equalizer_icon"
-        android:background="@android:color/transparent"
-        android:contentDescription="@string/equalizer_btn"
-        android:layout_weight="1"/>
-
-        <ImageButton
+            android:id="@+id/timerBtnPA"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/timer_icon"
@@ -171,6 +182,7 @@
             android:layout_weight="1"/>
 
         <ImageButton
+            android:id="@+id/shareBtnPA"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/share_icon"
