--- a/app/src/main/res/layout/activity_favourite.xml
+++ b/app/src/main/res/layout/activity_favourite.xml
@@ -17,6 +17,7 @@
         android:background="@color/purple_500">
 
         <ImageButton
+            android:id="@+id/backBtnFA"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:src="@drawable/back_icon"
