--- a/app/src/main/res/layout/activity_playlist.xml
+++ b/app/src/main/res/layout/activity_playlist.xml
@@ -16,6 +16,7 @@
         android:background="@color/purple_500">
 
         <ImageButton
+            android:id="@+id/backBtnPLA"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:src="@drawable/back_icon"
