--- a/app/src/main/res/layout/fragment_now_playing.xml
+++ b/app/src/main/res/layout/fragment_now_playing.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".NowPlaying"
-    android:background="?attr/themeColor">
+    android:background="@color/purple_200">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/songImgNP"
@@ -23,7 +23,7 @@
         android:layout_alignParentEnd="true"
         app:icon="@drawable/next_icon"
         app:iconTint="@color/white"
-        android:backgroundTint="?attr/themeColor"
+        android:backgroundTint="@color/purple_200"
         android:layout_centerVertical="true"
         app:iconSize="40dp"
         android:layout_marginEnd="10dp"/>
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content"
         app:icon="@drawable/play_icon"
         app:iconTint="@color/white"
-        android:backgroundTint="?attr/themeColor"
+        android:backgroundTint="@color/purple_200"
         android:layout_centerVertical="true"
         app:iconSize="40dp"
         android:layout_toStartOf="@id/nextBtnNP"
