--- a/app/src/main/res/layout-land/playlist_view.xml
+++ b/app/src/main/res/layout-land/playlist_view.xml
@@ -16,20 +16,19 @@
         android:src="@drawable/music_player_icon_slash_screen"
         app:shapeAppearanceOverlay="@style/curved"
         android:contentDescription="@string/song_img"/>
-
     <TextView
         android:id="@+id/playlistName"
         android:layout_width="130dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="130dp"
-        android:contentDescription="@string/playlist_name"
-        android:ellipsize="marquee"
-        android:gravity="center"
-        android:marqueeRepeatLimit="marquee_forever"
-        android:singleLine="true"
+        android:layout_height="40dp"
         android:text="@string/playlist_name"
+        android:contentDescription="@string/playlist_name"
         android:textColor="@color/black"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:gravity="center"
+        android:layout_marginTop="130dp"
+        android:ellipsize="marquee"
+        android:marqueeRepeatLimit="marquee_forever"
+        android:singleLine="true"/>
 
     <ImageButton
         android:id="@+id/playlistDeleteBtn"
