--- a/app/src/main/res/layout/playlist_view.xml
+++ b/app/src/main/res/layout/playlist_view.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="15dp"
     app:strokeWidth="2dp"
-    app:strokeColor="@color/purple_500"
+    app:strokeColor="@attr/themeColor"
     android:layout_margin="10dp"
     app:cardBackgroundColor="@color/white">
 
@@ -36,7 +36,7 @@
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:src="@drawable/delete_icon"
-        app:tint="@color/purple_500"
+        app:tint="@attr/themeColor"
         android:layout_marginEnd="5dp"
         android:layout_marginTop="130dp"
         android:layout_marginStart="130dp"
