--- a/app/src/main/res/drawable/add_icon.xml
+++ b/app/src/main/res/drawable/add_icon.xml
@@ -1,7 +1,9 @@
-<vector android:height="24dp"
-    android:viewportHeight="24"
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
     android:viewportWidth="24"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@color/purple_500"
-        android:pathData="M19,13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/>
+    android:viewportHeight="24">
+  <path
+      android:fillColor="@color/cool_pink"
+      android:pathData="M19,13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/>
 </vector>
