--- a/app/src/main/res/drawable/custom_search_view.xml
+++ b/app/src/main/res/drawable/custom_search_view.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="30dp" />
-    <stroke android:color="@color/purple_500" android:width="2dp"/>
+    <stroke android:color="@android:color/holo_red_dark" android:width="2dp"/>
 </shape>
