--- a/app/src/main/res/layout/activity_favourite.xml
+++ b/app/src/main/res/layout/activity_favourite.xml
@@ -14,17 +14,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="?attr/themeColor">
+        android:background="?attr/themeColor"
+        android:layout_marginTop="2dp">
 
         <ImageButton
             android:id="@+id/backBtnFA"
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
+            android:layout_height="40dp"
             android:src="@drawable/back_icon"
             android:contentDescription="@string/back_btn"
             android:backgroundTint="@android:color/transparent"
-            android:tint="@color/white"
-            tools:ignore="UseAppTint"
+            app:tint="@color/white"
             android:padding="5dp"/>
 
         <TextView
@@ -65,9 +65,21 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.9"
         app:strokeWidth="2dp"
-        app:strokeColor="?attr/themeColor"
-        tools:ignore="MissingConstraints" />
+        app:strokeColor="?attr/themeColor"/>
 
-
+    <TextView
+        android:id="@+id/instructionFV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:text="@string/favourite_note"
+        android:textSize="20sp"
+        android:padding="16dp"
+        android:gravity="center"
+        android:textColor="?attr/dialogBtnBackground"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
