--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".FeedbackActivity"
     android:orientation="vertical"
     android:layout_margin="16dp">
-    
+
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/topicFA"
         android:layout_width="match_parent"
@@ -34,15 +32,14 @@
         android:hint="@string/feedback"
         android:gravity="center|start"
         android:paddingHorizontal="16dp"/>
-
     <Button
         android:id="@+id/sendFA"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/purple_500"
+        android:backgroundTint="@color/white"
         android:text="@string/send"
         android:layout_gravity="center"
-        android:textColor="@color/purple_500"
+        android:textColor="@color/black"
         android:paddingHorizontal="16dp"/>
 
 </LinearLayout>
