--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".PlayerActivity"
     android:orientation="vertical"
     android:gravity="center">
@@ -19,98 +19,107 @@
 <!--    Back Button-->
         <ImageButton
             android:id="@+id/backBtnPA"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:src="@drawable/back_icon"
-            android:background="@android:color/transparent"
+            android:background="?attr/selectableItemBackground"
+            android:layout_marginStart="5dp"
             android:contentDescription="@string/back_btn"
-            android:padding="5dp"/>
+            app:tint="?colorOnPrimary"
+            android:padding="10dp" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:textColor="?colorOnPrimary"
             android:text="@string/world_of_music"
             android:textSize="20sp"
             android:gravity="center"
             android:layout_weight="1"
-            android:textColor="@color/black"
-            tools:ignore="NestedWeights" />
+            tools:ignore="NestedWeights"
+            android:textStyle="bold"/>
 
-<!--    favourites button-->
+<!--        Favourite Button-->
         <ImageButton
             android:id="@+id/favouriteBtnPA"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:src="@drawable/favourite_empty_icon"
-            android:background="@android:color/transparent"
-            android:layout_marginEnd="5dp"
-            android:contentDescription="@string/favourites_btn"/>
-
+            android:background="?attr/selectableItemBackground"
+            android:layout_marginEnd="20dp"
+            android:contentDescription="@string/favourites_btn"
+            app:tint="@android:color/holo_red_dark" />
     </LinearLayout>
 
-<!--    Current song image-->
+<!--    Current Song Image-->
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/songImgPA"
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:layout_margin="10dp"
+        android:padding="5dp"
         android:src="@drawable/music_player_icon_slash_screen"
         app:shapeAppearanceOverlay="@style/curved"
-        app:strokeColor="@color/purple_200"
+        app:strokeColor="@color/purple_100"
         app:strokeWidth="5dp"/>
 
-<!--    Current song name-->
+<!--    Current Song Name-->
     <TextView
         android:id="@+id/songNamePA"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:text="@string/song_name"
-        android:textColor="@color/black"
         android:textSize="18sp"
+        android:textColor="?colorOnPrimary"
         android:gravity="center"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:textIsSelectable="true" />
 
-<!--    Previous, Pause & Next-->
+<!--    Floating Buttons for Previous, Pause & Next-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_margin="10dp"
         android:orientation="horizontal"
+        android:layout_margin="10dp"
+         android:gravity="center"
         android:layout_weight="1">
 
-<!--        previous-->
+<!--        Previous Button-->
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:id="@+id/previousBtnPA"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/purple_50"
             app:icon="@drawable/previous_icon"
-            app:iconSize="40dp" />
+            android:backgroundTint="@color/purple_200"
+            app:iconTint="@color/white"
+            app:iconSize="40dp"/>
 
-<!--        pause & play -->
+<!--        Play & Pause Button-->
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:id="@+id/playPauseBtnPA"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="25dp"
-            android:backgroundTint="@color/purple_100"
             app:icon="@drawable/pause_icon"
-            app:iconSize="40dp" />
+            app:iconSize="50dp"
+            android:layout_marginHorizontal="25dp"
+            app:shapeAppearanceOverlay="@style/curved"
+            android:backgroundTint="@color/purple_200"
+            app:iconTint="@color/white"/>
 
-<!--        next-->
+<!--        Next Button-->
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:id="@+id/nextBtnPA"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/purple_50"
             app:icon="@drawable/next_icon"
-            app:iconSize="40dp" />
+            android:backgroundTint="@color/purple_200"
+            app:iconTint="@color/white"
+            app:iconSize="40dp"/>
 
     </LinearLayout>
 
-<!--    start, end, thanh cuon (seekbar) -->
+<!--    Seekbar & TextViews for it-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="25dp"
@@ -122,7 +131,7 @@
             android:id="@+id/tvSeekBarStart"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:textColor="@color/black"
+            android:textColor="?colorOnPrimary"
             android:textSize="15sp"
             android:text="@string/start_tv"
             android:gravity="center"/>
@@ -138,60 +147,75 @@
             android:id="@+id/tvSeekBarEnd"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:textColor="@color/black"
+            android:textColor="?colorOnPrimary"
             android:textSize="15sp"
             android:text="@string/end_tv"
             android:gravity="center"/>
-
-
     </LinearLayout>
 
-<!--    repeat, timer, share-->
+<!--    Last Row for Various Player Options-->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:orientation="horizontal"
         android:layout_weight="1">
 
-<!--        repeat button-->
+<!--        Repeat Button-->
         <ImageButton
             android:id="@+id/repeatBtnPA"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:src="@drawable/repeat_icon"
-            android:background="@android:color/transparent"
+            android:background="?attr/selectableItemBackground"
             android:contentDescription="@string/repeat_btn"
             android:layout_weight="1"
-            tools:ignore="NestedWeights" />
+            tools:ignore="NestedWeights"
+            app:tint="@color/cool_pink" />
 
+<!--        Equalizer Button-->
         <ImageButton
             android:id="@+id/equalizerBtnPA"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:src="@drawable/equalizer_icon"
-            android:background="@android:color/transparent"
+            android:background="?attr/selectableItemBackground"
             android:contentDescription="@string/equalizer_btn"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            app:tint="@color/cool_pink" />
 
+<!--        Timer Button-->
         <ImageButton
             android:id="@+id/timerBtnPA"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:src="@drawable/timer_icon"
-            android:background="@android:color/transparent"
-            android:contentDescription="@string/timer"
-            android:layout_weight="1"/>
+            android:background="?attr/selectableItemBackground"
+            android:contentDescription="@string/timer_btn"
+            android:layout_weight="1"
+            app:tint="@color/cool_pink" />
 
+<!--        Share Button-->
         <ImageButton
             android:id="@+id/shareBtnPA"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:src="@drawable/share_icon"
-            android:background="@android:color/transparent"
-            android:contentDescription="@string/share"
-            android:layout_weight="1"/>
+            android:background="?attr/selectableItemBackground"
+            android:contentDescription="@string/share_btn"
+            android:layout_weight="1"
+            app:tint="@color/cool_pink" />
 
 
+        <!--       Volume Button-->
+        <ImageButton
+            android:id="@+id/boosterBtnPA"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/volume_icon"
+            android:background="?attr/selectableItemBackground"
+            android:contentDescription="@string/share_btn"
+            android:layout_weight="1"
+            app:tint="@color/cool_pink" />
 
     </LinearLayout>
 
