--- a/app/src/main/res/layout/activity_selection.xml
+++ b/app/src/main/res/layout/activity_selection.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SelectionActivity">
@@ -15,8 +14,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="2dp"
-        >
+        android:layout_marginTop="2dp">
 
         <ImageButton
             android:id="@+id/backBtnSA"
@@ -24,22 +22,21 @@
             android:layout_height="50dp"
             android:src="@drawable/back_icon"
             android:contentDescription="@string/back_btn"
-            android:backgroundTint="@android:color/transparent"
-            android:tint="@color/purple_500"
-            tools:ignore="UseAppTint"
+            android:backgroundTint="?colorOnPrimary"
+            app:tint="@color/black"
             android:layout_margin="5dp"/>
-        
+
         <androidx.appcompat.widget.SearchView
             android:id="@+id/searchViewSA"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             app:queryHint="@string/search_song"
-            app:searchHintIcon="@drawable/search_icon"
+            app:searchIcon="@drawable/search_icon"
             android:focusable="false"
             app:iconifiedByDefault="false"
             android:background="@drawable/custom_search_view"
-            android:layout_margin="5dp"/>
-
+            android:layout_margin="5dp"
+            app:closeIcon="@null"/>
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
