--- a/app/src/main/res/layout/add_playlist_dialog.xml
+++ b/app/src/main/res/layout/add_playlist_dialog.xml
@@ -8,11 +8,11 @@
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:boxStrokeColor="@color/purple_500"
+        app:boxStrokeColor="@color/cool_pink"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="10dp"
         app:startIconDrawable="@drawable/playlist_icon"
-        app:startIconTint="@color/purple_500"
+        app:startIconTint="@color/cool_pink"
         android:hint="@string/playlist_name"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <com.google.android.material.textfield.TextInputEditText
@@ -26,11 +26,11 @@
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:boxStrokeColor="@color/black"
+        app:boxStrokeColor="@color/cool_pink"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="10dp"
         app:startIconDrawable="@drawable/playlist_icon"
-        app:startIconTint="@color/purple_500"
+        app:startIconTint="@color/cool_pink"
         android:hint="@string/user_name"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <com.google.android.material.textfield.TextInputEditText
