--- a/app/src/main/res/layout/bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/bottom_sheet_dialog.xml
@@ -16,7 +16,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:src="@drawable/timer_icon"
-            app:tint="@color/purple_500"
+            app:tint="@color/cool_pink"
             android:layout_margin="8dp"
             android:contentDescription="@string/min_15" />
         <TextView
@@ -37,7 +37,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:src="@drawable/timer_icon"
-            app:tint="@color/purple_500"
+            app:tint="@color/cool_pink"
             android:layout_margin="8dp"
             android:contentDescription="@string/min_30" />
         <TextView
@@ -58,7 +58,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:src="@drawable/timer_icon"
-            app:tint="@color/purple_500"
+            app:tint="@color/cool_pink"
             android:layout_margin="8dp"
             android:contentDescription="@string/min_60" />
         <TextView
