--- a/app/src/main/res/layout/music_view.xml
+++ b/app/src/main/res/layout/music_view.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="65dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="15dp"
-    android:layout_marginBottom="5dp"
-    tools:ignore="MissingDefaultResource">
+    android:layout_marginBottom="5dp">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/imageMV"
@@ -52,7 +50,7 @@
         android:layout_alignParentEnd="true"
         android:gravity="center"
         android:layout_gravity="end"
-
+        android:textColor="?colorOnPrimary"
         android:layout_marginHorizontal="5dp"/>
 
 </com.google.android.material.card.MaterialCardView>
