--- a/app/src/main/res/layout/playlist_view.xml
+++ b/app/src/main/res/layout/playlist_view.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="15dp"
     app:strokeWidth="2dp"
-    app:strokeColor="@attr/themeColor"
+    app:strokeColor="?attr/themeColor"
     android:layout_margin="10dp"
     app:cardBackgroundColor="@color/white">
 
@@ -16,27 +16,26 @@
         android:src="@drawable/music_player_icon_slash_screen"
         app:shapeAppearanceOverlay="@style/curved"
         android:contentDescription="@string/song_img"/>
-
     <TextView
         android:id="@+id/playlistName"
         android:layout_width="130dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="130dp"
-        android:contentDescription="@string/playlist_name"
-        android:ellipsize="marquee"
-        android:gravity="center"
-        android:marqueeRepeatLimit="marquee_forever"
-        android:singleLine="true"
+        android:layout_height="40dp"
         android:text="@string/playlist_name"
+        android:contentDescription="@string/playlist_name"
         android:textColor="@color/black"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:gravity="center"
+        android:layout_marginTop="130dp"
+        android:ellipsize="marquee"
+        android:marqueeRepeatLimit="marquee_forever"
+        android:singleLine="true"/>
 
     <ImageButton
         android:id="@+id/playlistDeleteBtn"
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:src="@drawable/delete_icon"
-        app:tint="@attr/themeColor"
+        app:tint="?attr/themeColor"
         android:layout_marginEnd="5dp"
         android:layout_marginTop="130dp"
         android:layout_marginStart="130dp"
