--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,21 +1,16 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.MusicPlayer" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-        <item name="colorPrimary">@color/lavender</item>
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-    </style>
 
-<!--    <style name="Theme.MusicPlayer" parent="Base.Theme.MusicPlayer" />-->
-    
     <style name="splash_screen" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="android:windowBackground">@drawable/splash_screen</item>
-<!--        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>-->
+    <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
     </style>
 
     <attr name="themeColor" format="color"/>
-
+    
+<!--    Background as well as text color for alert dialog buttons-->
+    <attr name="dialogTextColor" format="color"/>
+    <attr name="dialogBtnBackground" format="color"/>
+    
     //Theme for Activities
     <style name="coolPink" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="themeColor">@color/cool_pink</item>
@@ -26,8 +21,8 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/themeColor</item>
-<!--        <item name="dialogBtnBackground">?attr/themeColor</item>-->
-<!--        <item name="dialogTextColor">@color/white</item>-->
+        <item name="dialogBtnBackground">?attr/themeColor</item>
+        <item name="dialogTextColor">@color/white</item>
         <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
     </style>
     <style name="coolBlue" parent="Theme.MaterialComponents.Light.NoActionBar">
@@ -39,8 +34,8 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/themeColor</item>
-<!--        <item name="dialogBtnBackground">?attr/themeColor</item>-->
-<!--        <item name="dialogTextColor">@color/white</item>-->
+        <item name="dialogBtnBackground">?attr/themeColor</item>
+        <item name="dialogTextColor">@color/white</item>
         <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
     </style>
     <style name="coolPurple" parent="Theme.MaterialComponents.Light.NoActionBar">
@@ -52,8 +47,8 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/themeColor</item>
-<!--        <item name="dialogBtnBackground">?attr/themeColor</item>-->
-<!--        <item name="dialogTextColor">@color/white</item>-->
+        <item name="dialogBtnBackground">?attr/themeColor</item>
+        <item name="dialogTextColor">@color/white</item>
         <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
     </style>
     <style name="coolGreen" parent="Theme.MaterialComponents.Light.NoActionBar">
@@ -65,8 +60,8 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/themeColor</item>
-<!--        <item name="dialogBtnBackground">?attr/themeColor</item>-->
-<!--        <item name="dialogTextColor">@color/white</item>-->
+        <item name="dialogBtnBackground">?attr/themeColor</item>
+        <item name="dialogTextColor">@color/white</item>
         <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
     </style>
 
@@ -80,8 +75,8 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/themeColor</item>
-<!--        <item name="dialogBtnBackground">?attr/themeColor</item>-->
-<!--        <item name="dialogTextColor">@color/white</item>-->
+        <item name="dialogBtnBackground">?attr/themeColor</item>
+        <item name="dialogTextColor">@color/white</item>
         <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
     </style>
     <style name="coolBlueNav" parent="Theme.MaterialComponents.Light">
@@ -93,8 +88,8 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/themeColor</item>
-<!--        <item name="dialogBtnBackground">?attr/themeColor</item>-->
-<!--        <item name="dialogTextColor">@color/white</item>-->
+        <item name="dialogBtnBackground">?attr/themeColor</item>
+        <item name="dialogTextColor">@color/white</item>
         <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
     </style>
     <style name="coolPurpleNav" parent="Theme.MaterialComponents.Light">
@@ -106,8 +101,8 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/themeColor</item>
-<!--        <item name="dialogBtnBackground">?attr/themeColor</item>-->
-<!--        <item name="dialogTextColor">@color/white</item>-->
+        <item name="dialogBtnBackground">?attr/themeColor</item>
+        <item name="dialogTextColor">@color/white</item>
         <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
     </style>
     <style name="coolGreenNav" parent="Theme.MaterialComponents.Light">
@@ -119,11 +114,10 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/themeColor</item>
-<!--        <item name="dialogBtnBackground">?attr/themeColor</item>-->
-<!--        <item name="dialogTextColor">@color/white</item>-->
+        <item name="dialogBtnBackground">?attr/themeColor</item>
+        <item name="dialogTextColor">@color/white</item>
         <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
     </style>
-
     //new dark Theme
     <style name="coolBlack" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="themeColor">@color/black</item>
@@ -134,8 +128,8 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/themeColor</item>
-<!--        <item name="dialogBtnBackground">@color/white</item>-->
-<!--        <item name="dialogTextColor">@color/black</item>-->
+        <item name="dialogBtnBackground">@color/white</item>
+        <item name="dialogTextColor">@color/black</item>
     </style>
     <style name="coolBlackNav" parent="Theme.MaterialComponents.DayNight">
         <item name="themeColor">@color/black</item>
@@ -146,7 +140,7 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/themeColor</item>
-<!--        <item name="dialogBtnBackground">@color/white</item>-->
-<!--        <item name="dialogTextColor">@color/black</item>-->
+        <item name="dialogBtnBackground">@color/white</item>
+        <item name="dialogTextColor">@color/black</item>
     </style>
 </resources>
