--- a/app/src/main/res/drawable/gradient_black.xml
+++ b/app/src/main/res/drawable/gradient_black.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <gradient
-        android:startColor="@color/black"
-        android:endColor="@color/white"
+        android:startColor="#000000"
+        android:endColor="#FFFFFF"
         android:type="linear"/>
 </shape>
