--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
+    <color name="pink">#EDFA3A7E</color>
 <!--    custom colors-->
     <color name="cool_blue">#0091EA</color>
     <color name="cool_green">#64DD17</color>
