--- a/app/src/main/res/layout/fragment_now_playing.xml
+++ b/app/src/main/res/layout/fragment_now_playing.xml
@@ -9,12 +9,15 @@
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/songImgNP"
-        android:layout_width="70dp"
+        android:layout_width="55dp"
         android:layout_height="55dp"
         android:layout_marginHorizontal="10dp"
         android:layout_marginVertical="5dp"
+        android:padding="2dp"
+        android:src="@drawable/music_player_icon_slash_screen"
         app:shapeAppearanceOverlay="@style/curved"
-        android:src="@drawable/music_player_icon_slash_screen"/>
+        app:strokeWidth="1dp"/>
+
 
 
 
@@ -29,6 +32,18 @@
         android:layout_centerVertical="true"
         app:iconSize="40dp"
         android:layout_marginEnd="10dp"/>
+
+<!--    <ImageView-->
+<!--        android:id="@+id/playPauseBtnNP"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:src="@drawable/play_icon"-->
+<!--        app:tint="?colorOnPrimary"-->
+<!--        android:padding="10dp"-->
+<!--        android:background="?attr/themeColor"-->
+<!--        android:layout_centerVertical="true"-->
+<!--        android:layout_toStartOf="@id/nextBtnNP"-->
+<!--        android:layout_marginHorizontal="5dp" />-->
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/playPauseBtnNP"
