--- a/app/src/main/res/layout/activity_play_next.xml
+++ b/app/src/main/res/layout/activity_play_next.xml
@@ -50,7 +50,7 @@
         android:textSize="20sp"
         android:padding="16dp"
         android:gravity="center"
-        android:textColor="?attr/dialogBtnBackground"/>
+        android:textColor="?attr/themeColor"/>
 
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/playNextRV"
