--- a/app/src/main/res/drawable/gradient_black.xml
+++ b/app/src/main/res/drawable/gradient_black.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <gradient
         android:startColor="#000000"
-        android:endColor="#FFFFFF"
+        android:endColor="#000000"
         android:type="linear"/>
 </shape>
