--- a/app/src/main/res/drawable/gradient_blue.xml
+++ b/app/src/main/res/drawable/gradient_blue.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <gradient
         android:startColor="#008BFF"
-        android:endColor="#BBDEFB"
+        android:endColor="#008BFF"
         android:type="linear"/>
 </shape>
