--- a/app/src/main/res/drawable/gradient_green.xml
+++ b/app/src/main/res/drawable/gradient_green.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <gradient
-        android:startColor="#00FF08"
-        android:endColor="#C8E6C9"
+        android:startColor="#019C06"
+        android:endColor="#019C06"
         android:type="linear"/>
 </shape>
