--- a/app/src/main/res/drawable/gradient_pink.xml
+++ b/app/src/main/res/drawable/gradient_pink.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <gradient
         android:startColor="#FF0058"
-        android:endColor="#F8BBD0"
+        android:endColor="#FF0058"
         android:type="linear"/>
 </shape>
