--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -6,6 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".PlayerActivity"
     android:orientation="vertical"
+    android:background="@color/purple_10"
     android:gravity="center">
 
 <!--    First Row-->
@@ -42,8 +43,8 @@
 <!--        Favourite Button-->
         <ImageButton
             android:id="@+id/favouriteBtnPA"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:src="@drawable/favourite_empty_icon"
             android:background="?attr/selectableItemBackground"
             android:layout_marginEnd="20dp"
@@ -54,8 +55,8 @@
 <!--    Current Song Image-->
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/songImgPA"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
+        android:layout_width="280dp"
+        android:layout_height="280dp"
         android:layout_margin="10dp"
         android:padding="5dp"
         android:src="@drawable/music_player_icon_slash_screen"
@@ -63,14 +64,16 @@
         app:strokeColor="@color/purple_100"
         app:strokeWidth="5dp"/>
 
+
+
 <!--    Current Song Name-->
     <TextView
         android:id="@+id/songNamePA"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
+        android:layout_marginHorizontal="15dp"
         android:text="@string/song_name"
-        android:textSize="18sp"
+        android:textSize="25sp"
         android:textColor="?colorOnPrimary"
         android:gravity="center"
         android:layout_weight="1"
