--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="lavender">#8692f7</color>
+    <color name="purple_10">#F4E3F8</color>
     <color name="purple_50">#E0CAFA</color>
     <color name="purple_100">#CCA5FB</color>
     <color name="purple_200">#FFBB86FC</color>
