--- a/app/src/main/res/layout/activity_playlist_details.xml
+++ b/app/src/main/res/layout/activity_playlist_details.xml
@@ -11,32 +11,32 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="?attr/themeColor"
         android:layout_marginTop="2dp">
 
         <ImageButton
             android:id="@+id/backBtnPD"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="5dp"
             android:src="@drawable/back_icon"
             android:contentDescription="@string/back_btn"
             android:backgroundTint="@android:color/transparent"
-            app:tint="@color/white"
+            app:tint="@color/black"
             android:padding="5dp"/>
 
         <TextView
             android:id="@+id/playlistNamePD"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="60dp"
             android:contentDescription="@string/playlist_btn"
             android:gravity="center"
             android:text="@string/playlist_btn"
-            android:textColor="@color/white"
-            android:textSize="25sp"
+            android:textColor="@color/black"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:singleLine="true"/>
     </LinearLayout>
