--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -5,12 +5,27 @@
     android:layout_height="match_parent"
     tools:context=".AboutActivity">
 
-    <TextView
-        android:id="@+id/aboutText"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/about"
-        android:textSize="18sp"
-        android:layout_margin="16dp"/>
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/aboutImage"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:src="@drawable/music_icon"
+            android:layout_marginTop="32dp" />
+
+        <TextView
+            android:id="@+id/aboutText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/about"
+            android:textSize="18sp"
+            android:layout_margin="16dp"/>
+
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
