--- a/app/src/main/res/layout/activity_favourite.xml
+++ b/app/src/main/res/layout/activity_favourite.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,33 +11,53 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="?attr/themeColor"
         android:layout_marginTop="2dp">
 
-        <ImageButton
-            android:id="@+id/backBtnFA"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:src="@drawable/back_icon"
-            android:contentDescription="@string/back_btn"
-            android:backgroundTint="@android:color/transparent"
-            app:tint="@color/white"
-            android:padding="5dp"/>
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="horizontal">-->
+
+            <ImageButton
+                android:id="@+id/backBtnFA"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="5dp"
+                android:backgroundTint="@android:color/transparent"
+                android:contentDescription="@string/back_btn"
+                android:padding="5dp"
+                android:src="@drawable/back_icon"
+                app:tint="@color/black" />
+
+<!--            <com.google.android.material.imageview.ShapeableImageView-->
+<!--                android:id="@+id/sortBtnFA"-->
+<!--                android:layout_width="40dp"-->
+<!--                android:layout_height="50dp"-->
+<!--                android:layout_marginEnd="5dp"-->
+<!--                android:padding="5dp"-->
+<!--                android:src="@drawable/sort_icon"-->
+<!--                android:tint="@color/black" />-->
+
+<!--        </LinearLayout>-->
+
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="50dp"
             android:contentDescription="@string/favourites_btn"
-            android:gravity="center"
+            android:gravity="center|top"
             android:text="@string/favourites_btn"
-            android:textColor="@color/white"
-            android:textSize="25sp"
+            android:textColor="@color/black"
+            android:textSize="22sp"
             android:textStyle="bold" />
     </LinearLayout>
+
+
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/favouriteRV"
