--- a/app/src/main/res/layout/favourite_view.xml
+++ b/app/src/main/res/layout/favourite_view.xml
@@ -1,29 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    app:cardCornerRadius="15dp"
-    android:layout_margin="5dp">
+    android:layout_width="match_parent"
+    android:layout_height="67dp"
+    android:paddingHorizontal="15dp">
 
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/songImgFV"
-        android:layout_width="80dp"
-        android:layout_height="75dp"
-        app:shapeAppearanceOverlay="@style/curved"
-        android:contentDescription="@string/song_name"
-        android:src="@drawable/music_player_icon_slash_screen"
-        android:padding="5dp"/>
+    <com.google.android.material.card.MaterialCardView
 
-    <TextView
-        android:id="@+id/songNameFV"
-        android:layout_width="80dp"
-        android:layout_height="wrap_content"
-        android:maxLines="2"
-        android:textColor="?colorOnPrimary"
-        android:text="@string/song_name"
-        android:gravity="center"
-        android:layout_marginTop="75dp"
-        android:padding="5dp"/>
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:layout_marginBottom="5dp"
+        app:cardCornerRadius="5dp"
+        android:layout_margin="0dp">
 
-</com.google.android.material.card.MaterialCardView>
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/songImgFV"
+            android:layout_width="60dp"
+            android:layout_height="55dp"
+            android:layout_marginVertical="5dp"
+            android:layout_marginStart="5dp"
+            android:src="@mipmap/music_player_icon"
+            app:shapeAppearanceOverlay="@style/curved" />
+
+        <TextView
+            android:id="@+id/songNameFV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="13dp"
+            android:layout_marginStart="70dp"
+            android:layout_marginEnd="50dp"
+            android:layout_toStartOf="@id/songDurationFV"
+            android:layout_toEndOf="@id/songImgFV"
+            android:gravity="center_vertical"
+            android:singleLine="true"
+            android:text="@string/song_name"
+            android:textColor="?colorOnPrimary" />
+
+        <TextView
+            android:id="@+id/songAlbumFV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="70dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="50dp"
+            android:layout_toStartOf="@id/songDurationFV"
+            android:layout_toEndOf="@id/songImgFV"
+            android:gravity="center_vertical"
+            android:singleLine="true"
+            android:text="@string/song_name" />
+
+        <TextView
+            android:id="@+id/songDurationFV"
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:text="@string/start_tv"
+            android:layout_alignParentEnd="true"
+            android:gravity="center"
+            android:layout_gravity="end"
+            android:textColor="?colorOnPrimary"
+            android:layout_marginHorizontal="5dp"/>
+
+    </com.google.android.material.card.MaterialCardView>
+
+</LinearLayout>
+
+
