--- a/app/src/main/res/layout/fragment_now_playing.xml
+++ b/app/src/main/res/layout/fragment_now_playing.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".NowPlaying"
-    android:background="?attr/themeColor">
+    android:background="@color/pink_100">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/songImgNP"
