--- a/app/src/main/res/layout/music_view.xml
+++ b/app/src/main/res/layout/music_view.xml
@@ -1,56 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
+
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="65dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="15dp"
-    android:layout_marginBottom="5dp">
+    android:layout_width="match_parent"
+    android:layout_height="67dp"
+    android:paddingHorizontal="15dp">
 
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/imageMV"
-        android:layout_width="60dp"
-        android:layout_height="55dp"
-        android:src="@mipmap/music_player_icon"
-        app:shapeAppearanceOverlay="@style/curved"
-        android:layout_marginStart="5dp"
-        android:layout_marginVertical="5dp"/>
+    <com.google.android.material.card.MaterialCardView
 
-    <TextView
-        android:id="@+id/songNameMV"
-        android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        android:layout_toStartOf="@id/songDuration"
-        android:layout_toEndOf="@id/imageMV"
-        android:gravity="center_vertical"
-        android:singleLine="true"
-        android:text="@string/song_name"
-        android:textColor="?colorOnPrimary"
-        android:layout_marginStart="70dp"
-        android:layout_marginEnd="50dp"/>
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        app:cardCornerRadius="5dp"
+        android:layout_marginBottom="5dp">
 
-    <TextView
-        android:id="@+id/songAlbumMV"
-        android:layout_width="wrap_content"
-        android:layout_height="25dp"
-        android:text="@string/song_name"
-        android:layout_toEndOf="@id/imageMV"
-        android:layout_toStartOf="@id/songDuration"
-        android:layout_marginTop="30dp"
-        android:gravity="center_vertical"
-        android:singleLine="true"
-        android:layout_marginStart="70dp"
-        android:layout_marginEnd="50dp"/>
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/imageMV"
+            android:layout_width="60dp"
+            android:layout_height="55dp"
+            android:src="@mipmap/music_player_icon"
+            app:shapeAppearanceOverlay="@style/curved"
+            android:layout_marginStart="5dp"
+            android:layout_marginVertical="5dp"/>
 
-    <TextView
-        android:id="@+id/songDuration"
-        android:layout_width="50dp"
-        android:layout_height="match_parent"
-        android:text="@string/start_tv"
-        android:layout_alignParentEnd="true"
-        android:gravity="center"
-        android:layout_gravity="end"
-        android:textColor="?colorOnPrimary"
-        android:layout_marginHorizontal="5dp"/>
+        <TextView
+            android:id="@+id/songNameMV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="13dp"
+            android:layout_marginStart="70dp"
+            android:layout_marginEnd="50dp"
+            android:layout_toStartOf="@id/songDuration"
+            android:layout_toEndOf="@id/imageMV"
+            android:gravity="center_vertical"
+            android:singleLine="true"
+            android:text="@string/song_name"
+            android:textColor="?colorOnPrimary" />
 
-</com.google.android.material.card.MaterialCardView>
+        <TextView
+            android:id="@+id/songAlbumMV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="70dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="50dp"
+            android:layout_toStartOf="@id/songDuration"
+            android:layout_toEndOf="@id/imageMV"
+            android:gravity="center_vertical"
+            android:singleLine="true"
+            android:text="@string/song_name" />
+
+        <TextView
+            android:id="@+id/songDuration"
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:text="@string/start_tv"
+            android:layout_alignParentEnd="true"
+            android:gravity="center"
+            android:layout_gravity="end"
+            android:textColor="?colorOnPrimary"
+            android:layout_marginHorizontal="5dp"/>
+
+    </com.google.android.material.card.MaterialCardView>
+
+</LinearLayout>
+
