--- a/app/src/main/res/layout/playlist_view.xml
+++ b/app/src/main/res/layout/playlist_view.xml
@@ -1,45 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+<com.google.android.material.card.MaterialCardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="170dp"
+    android:layout_height="210dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="15dp"
-    app:strokeWidth="2dp"
-    app:strokeColor="?attr/themeColor"
     android:layout_margin="10dp"
-    app:cardBackgroundColor="@color/white">
+    app:cardElevation="0dp"
+    app:cardCornerRadius="0dp"
+    app:strokeWidth="0dp"
+    >
+<!--    app:cardCornerRadius="15dp"-->
+<!--    app:strokeWidth="2dp"-->
+<!--    app:strokeColor="?attr/themeColor"-->
+
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/playlistImg"
         android:layout_width="170dp"
-        android:layout_height="130dp"
+        android:layout_height="170dp"
         android:src="@drawable/music_player_icon_slash_screen"
-        app:shapeAppearanceOverlay="@style/curved"
+        app:shapeAppearanceOverlay="@style/big_curved"
         android:contentDescription="@string/song_img"/>
+
+
     <TextView
         android:id="@+id/playlistName"
-        android:layout_width="130dp"
+        android:layout_width="135dp"
         android:layout_height="40dp"
-        android:text="@string/playlist_name"
+        android:layout_marginTop="170dp"
         android:contentDescription="@string/playlist_name"
-        android:textColor="@color/black"
-        android:textSize="18sp"
-        android:gravity="center"
-        android:layout_marginTop="130dp"
         android:ellipsize="marquee"
+        android:gravity="center"
         android:marqueeRepeatLimit="marquee_forever"
-        android:singleLine="true"/>
+        android:singleLine="true"
+        android:text="@string/playlist_name"
+        android:textColor="@color/black"
+        android:textSize="18sp" />
 
     <ImageButton
         android:id="@+id/playlistDeleteBtn"
         android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:src="@drawable/delete_icon"
-        app:tint="?attr/themeColor"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="135dp"
+        android:layout_marginTop="170dp"
         android:layout_marginEnd="5dp"
-        android:layout_marginTop="130dp"
-        android:layout_marginStart="130dp"
         android:backgroundTint="@android:color/transparent"
-        android:contentDescription="@string/playlist_delete" />
+        android:contentDescription="@string/playlist_delete"
+        android:src="@drawable/ic_close"
+        app:tint="@color/black" />
+
+
 
 </com.google.android.material.card.MaterialCardView>
