--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="black_100">#333333</color>
     <color name="white">#FFFFFFFF</color>
     <color name="orange">#FF987D</color>
     <color name="orange_10">#FFE4DD</color>
