--- a/app/src/main/res/layout/fragment_now_playing.xml
+++ b/app/src/main/res/layout/fragment_now_playing.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".NowPlaying"
-    android:background="@color/pink_100">
+    android:background="?attr/colorSecondary">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/songImgNP"
@@ -29,7 +29,7 @@
         android:layout_alignParentEnd="true"
         app:icon="@drawable/next_icon"
         app:iconTint="@color/white"
-        android:backgroundTint="?attr/themeColor"
+        android:backgroundTint="?attr/colorSecondary"
         android:layout_centerVertical="true"
         app:iconSize="40dp"
         android:outlineProvider="none"
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         app:icon="@drawable/play_icon"
         app:iconTint="@color/white"
-        android:backgroundTint="?attr/themeColor"
+        android:backgroundTint="?attr/colorSecondary"
         android:layout_centerVertical="true"
         app:iconSize="40dp"
         android:outlineProvider="none"
@@ -50,20 +50,56 @@
         android:layout_marginHorizontal="5dp"/>
 
 
-
-    <TextView
-        android:id="@+id/songNameNP"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:text="@string/song_name"
-        android:textSize="18sp"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:gravity="center|start"
+        android:layout_height="wrap_content"
         android:layout_toStartOf="@id/playPauseBtnNP"
         android:layout_toEndOf="@id/songImgNP"
-        android:ellipsize="marquee"
-        android:marqueeRepeatLimit="marquee_forever"
-        android:singleLine="true"/>
+        android:layout_marginStart="10dp"
+        android:layout_marginVertical="10dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/songNameNP"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/song_name"
+            android:textSize="18sp"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:gravity="start"
+            android:ellipsize="marquee"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:singleLine="true"/>
+
+        <TextView
+            android:id="@+id/songAlbumNP"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/song_name"
+            android:textSize="14sp"
+            android:textColor="@color/white"
+            android:gravity="start"
+            android:ellipsize="marquee"
+            android:scrollHorizontally="true"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:singleLine="true"/>
+
+    </LinearLayout>
+
+<!--    <TextView-->
+<!--        android:id="@+id/songNameNP"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="60dp"-->
+<!--        android:text="@string/song_name"-->
+<!--        android:textSize="18sp"-->
+<!--        android:textColor="@color/white"-->
+<!--        android:textStyle="bold"-->
+<!--        android:gravity="center|start"-->
+<!--        android:layout_toStartOf="@id/playPauseBtnNP"-->
+<!--        android:layout_toEndOf="@id/songImgNP"-->
+<!--        android:ellipsize="marquee"-->
+<!--        android:marqueeRepeatLimit="marquee_forever"-->
+<!--        android:singleLine="true"/>-->
 
 </RelativeLayout>
