--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,13 +11,13 @@
     <attr name="dialogTextColor" format="color"/>
     <attr name="dialogBtnBackground" format="color"/>
     
-    //Theme for Activities
+    //Theme for Activities pink
     <style name="coolPink" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="themeColor">@color/cool_pink</item>
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/black</item>
         <item name="colorOnPrimary">@color/black</item>
-        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondary">@color/pink_100</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/themeColor</item>
@@ -25,6 +25,49 @@
         <item name="dialogTextColor">@color/white</item>
         <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
     </style>
+
+    <style name="coolPinkNav" parent="Theme.MaterialComponents.Light">
+        <item name="themeColor">@color/cool_pink</item>
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimaryVariant">@color/black</item>
+        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorSecondary">@color/pink_100</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/themeColor</item>
+        <item name="dialogBtnBackground">?attr/themeColor</item>
+        <item name="dialogTextColor">@color/white</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+    </style>
+
+
+    //new dark Theme
+    <style name="coolBlack" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="themeColor">@color/black</item>
+        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimaryVariant">@color/black</item>
+        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorSecondary">@color/black_100</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/themeColor</item>
+        <item name="dialogBtnBackground">@color/white</item>
+        <item name="dialogTextColor">@color/black</item>
+    </style>
+    <style name="coolBlackNav" parent="Theme.MaterialComponents.DayNight">
+        <item name="themeColor">@color/black</item>
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimaryVariant">@color/black</item>
+        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorSecondary">@color/black_100</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/themeColor</item>
+        <item name="dialogBtnBackground">@color/white</item>
+        <item name="dialogTextColor">@color/black</item>
+    </style>
+
+
     <style name="coolBlue" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="themeColor">@color/cool_blue</item>
         <item name="colorPrimary">@color/purple_500</item>
@@ -66,19 +109,7 @@
     </style>
 
     //Theme for Navigation Drawer
-    <style name="coolPinkNav" parent="Theme.MaterialComponents.Light">
-        <item name="themeColor">@color/cool_pink</item>
-        <item name="colorPrimary">@color/white</item>
-        <item name="colorPrimaryVariant">@color/black</item>
-        <item name="colorOnPrimary">@color/black</item>
-        <item name="colorSecondary">@color/cool_pink</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/themeColor</item>
-        <item name="dialogBtnBackground">?attr/themeColor</item>
-        <item name="dialogTextColor">@color/white</item>
-        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
-    </style>
+
     <style name="coolBlueNav" parent="Theme.MaterialComponents.Light">
         <item name="themeColor">@color/cool_blue</item>
         <item name="colorPrimary">@color/white</item>
@@ -118,29 +149,7 @@
         <item name="dialogTextColor">@color/white</item>
         <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
     </style>
-    //new dark Theme
-    <style name="coolBlack" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="themeColor">@color/black</item>
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/black</item>
-        <item name="colorOnPrimary">@color/black</item>
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/themeColor</item>
-        <item name="dialogBtnBackground">@color/white</item>
-        <item name="dialogTextColor">@color/black</item>
-    </style>
-    <style name="coolBlackNav" parent="Theme.MaterialComponents.DayNight">
-        <item name="themeColor">@color/black</item>
-        <item name="colorPrimary">@color/white</item>
-        <item name="colorPrimaryVariant">@color/black</item>
-        <item name="colorOnPrimary">@color/black</item>
-        <item name="colorSecondary">@color/cool_pink</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/themeColor</item>
-        <item name="dialogBtnBackground">@color/white</item>
-        <item name="dialogTextColor">@color/black</item>
-    </style>
+
+
+
 </resources>
