--- a/app/src/main/res/drawable/gradient_pink.xml
+++ b/app/src/main/res/drawable/gradient_pink.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <gradient
-        android:startColor="#FF0058"
-        android:endColor="#FF0058"
+        android:startColor="#EDFB4888"
+        android:endColor="#EDFB4888"
         android:type="linear"/>
 </shape>
